@@ -738,8 +738,35 @@ class PorterStemmerInternalsUnitTest extends DrupalWebTestCase {
     $this->assertEqual( $worda, 'ie', "Step1a should be ie, was $worda", 'Stemmer steps' );
     $this->assertEqual( $wordb, 'ie', "Step1a should be ie, was $wordb", 'Stemmer steps' );
   }
-}
 
+  /**
+   * Tests the excerpt function porterstemmer_sbp_excerpt_match().
+   */
+  function testExcerpts() {
+    // Test with simple stemmed match.
+    $key = 'walking';
+    $text = 'I walked to the Grand Walks yesterday.';
+    $offset = 0;
+    $boundary = '[ ]+';
+    $result1 = porterstemmer_sbp_excerpt_match($key, $text, $offset, $boundary);
+    $this->assertEqual($result1['where'], 2, 'Found match 1 in right place', 'Excerpt');
+    $this->assertEqual($result1['keyword'], 'walked', 'Found right keyword for match 1', 'Excerpt');
+
+    // Test with upper-case match.
+    $offset = 12;
+    $result2 = porterstemmer_sbp_excerpt_match($key, $text, $offset, $boundary);
+    $this->assertEqual($result2['where'], 22, 'Found match 2 in right place', 'Excerpt');
+    $this->assertEqual($result2['keyword'], 'Walks', 'Found right keyword for match 2', 'Excerpt');
+
+    // Test with a false match followed by a real match.
+    $text = 'I walknotawordhere to walk to school.';
+    $offset = 0;
+    $result3 = porterstemmer_sbp_excerpt_match($key, $text, $offset, $boundary);
+    $this->assertEqual($result3['where'], 22, 'Found match 3 in right place', 'Excerpt');
+    $this->assertEqual($result3['keyword'], 'walk', 'Found right keyword for match 3', 'Excerpt');
+
+  }
+}
 
 /**
  * Unit tests for Porter Stemmer - Stemming output part 1 PECL.
